# django-api-rest-example

./: .gitignore  README.md  pyproject.toml
project/: settings.py  urls.py
project/apps/escola/: models.py  urls.py  views.py
