[tool.poetry]
name = "django-api-rest-example"
version = "0.1.0"
description = "An example of django rest api"
authors = ["Wagner <wmaluk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
python-decouple = "^3.6"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
